--- a/docroot/themes/custom/sa_neato/scss/variables/_variables.scss
+++ b/docroot/themes/custom/sa_neato/scss/variables/_variables.scss
@@ -12,9 +12,9 @@ $heading-line-height: 1.1;
 // Other Sizes
 $base-border-radius: 10px;
 $inner-border-radius: 8px;
-$base-spacing: $base-line-height * 1em;
-$small-spacing: $base-spacing / 3;
-$top-spacing: $base-spacing / 3;
+$base-spacing: $base-line-height * 1.5em;
+$small-spacing: $base-spacing / 2.5;
+$top-spacing: $base-spacing / 2;
 
 $paragraph-spacing: $base-spacing / 2;
 $base-z-index: 0;
